interfata mai frumoasa, am reparat profil

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,53 @@
+version: '3.8'
+
 services:
-  backend:
+  # 1. Baza de date (POSTGRES)
+  db:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password  # Sau parola ta
+      POSTGRES_DB: fishing_db      # Sau numele bazei tale
+    ports:
+      - "5432:5432"
+    volumes:
+      # Asta e linia care SALVEAZĂ datele!
+      - pgdata:/var/lib/postgresql/data
+    restart: always
+
+  # 2. Serverul (Node.js)
+  server:
     build: ./server
-    container_name: fishing-backend
     ports:
       - "5000:5000"
-    restart: unless-stopped
+    environment:
+      - PORT=5000
+      - DB_HOST=db
+      - DB_USER=postgres
+      - DB_PASS=password
+      - DB_NAME=postgres
+    depends_on:
+      - db
+    volumes:
+      # 1. Mapăm codul tău ca să se vadă modificările
+      - ./server:/app
+      
+      # 2. IGNORĂ node_modules de pe Windows (Asta e linia care te salvează!)
+      - /app/node_modules
+      
+      # 3. Păstrăm pozele
+      - ./server/uploads:/app/uploads
+    restart: always
 
-  frontend:
+  # 3. Clientul (Angular)
+  client:
     build: ./client
-    container_name: fishing-frontend
     ports:
       - "4200:4200"
     depends_on:
-      - backend
+      - server
+    restart: always
+
+# 4. Definim volumul pentru bază (la finalul fișierului)
+volumes:
+  pgdata:
